[gd_scene load_steps=8 format=3 uid="uid://cjmcrs01enx7"]

[ext_resource type="Script" path="res://UI/Phone.gd" id="1_fnsvk"]
[ext_resource type="Texture2D" uid="uid://celsr162wwa5s" path="res://Textures/Phone/phone_app.png" id="2_3ui7i"]

[sub_resource type="SystemFont" id="SystemFont_r85jf"]
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4orl4"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Animation" id="Animation_m1rha"]
resource_name = "pull_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(0.0883884, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -690)]
}

[sub_resource type="Animation" id="Animation_e7ade"]
resource_name = "pull_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(0.148651, 1),
"update": 0,
"values": [Vector2(0, -690), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qbei2"]
_data = {
"pull_down": SubResource("Animation_m1rha"),
"pull_up": SubResource("Animation_e7ade")
}

[node name="Phone" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_fnsvk")

[node name="Panel" type="TextureRect" parent="."]
layout_mode = 0
offset_top = -690.0
offset_right = 903.0
offset_bottom = 172.0
texture = ExtResource("2_3ui7i")
expand_mode = 1

[node name="Control" type="Control" parent="Panel"]
layout_mode = 1
anchor_left = 0.306
anchor_top = 0.5
anchor_right = 0.306
anchor_bottom = 0.5
offset_left = -239.318
offset_top = -425.0
offset_right = 243.682
offset_bottom = 382.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Control"]
layout_mode = 0
offset_left = 60.0
offset_top = 344.0
offset_right = 416.0
offset_bottom = 685.0

[node name="FirstRow" type="HBoxContainer" parent="Panel/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 107.985)
layout_mode = 2

[node name="SecondRow" type="HBoxContainer" parent="Panel/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 111.945)
layout_mode = 2

[node name="ThirdRow" type="HBoxContainer" parent="Panel/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="PhoneToggle" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 40.0
offset_top = 29.0
offset_right = 517.0
offset_bottom = 77.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = SubResource("SystemFont_r85jf")
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_4orl4")
text = "Press to Pull Up"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qbei2")
}

[node name="PhoneSFX" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="Panel/PhoneToggle" to="." method="_on_phone_toggle_pressed"]
